[package]
name = "snackrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16.2"
lmdb = "0.8.0"
# stuffer_shack = { path="../stuffer_shack-rs" }
stuffer_shack = { git="https://github.com/marc-casperlabs/stuffer_shack-rs/", rev="f622fc031359bc5d9b7b193453776e862586ace1" }
structopt = "0.3.26"
generic-array = "0.14.5"
